--- a/MPfm/MPfm.iOS/XIB/iPad/PlayerViewController_iPad.xib
+++ b/MPfm/MPfm.iOS/XIB/iPad/PlayerViewController_iPad.xib
@@ -12,19 +12,26 @@
                 <outlet property="btnPrevious" destination="Li4-F2-EPs" id="kUh-TT-TJq"/>
                 <outlet property="btnRepeat" destination="JK1-NC-Nc1" id="at1-Lt-p98"/>
                 <outlet property="btnShuffle" destination="Oh2-IK-Guk" id="Xtx-k6-lOR"/>
+                <outlet property="graphView" destination="WgQ-Ag-aPc" id="bhc-l1-P8k"/>
                 <outlet property="imageViewAlbumArt" destination="12" id="25"/>
+                <outlet property="imageViewVolumeHigh" destination="yFd-Nz-R3R" id="3lc-tH-gpd"/>
+                <outlet property="imageViewVolumeLow" destination="11n-1S-xDe" id="a3u-Kg-CzB"/>
                 <outlet property="lblLength" destination="10" id="27"/>
                 <outlet property="lblPosition" destination="11" id="24"/>
+                <outlet property="lblPresetName" destination="dKR-nQ-mgs" id="R0m-LR-kYD"/>
                 <outlet property="lblScrubbingType" destination="7" id="22"/>
                 <outlet property="lblSlideMessage" destination="8" id="21"/>
+                <outlet property="outputMeter" destination="TnV-d3-0Xw" id="3hT-6o-awI"/>
                 <outlet property="pageControl" destination="18" id="32"/>
                 <outlet property="scrollView" destination="13" id="31"/>
                 <outlet property="scrollViewWaveForm" destination="6" id="33"/>
                 <outlet property="sliderPosition" destination="9" id="26"/>
                 <outlet property="view" destination="2" id="3"/>
+                <outlet property="viewEffects" destination="TN5-AR-NKj" id="kn7-4Y-3Ig"/>
                 <outlet property="viewMain" destination="4" id="20"/>
                 <outlet property="viewPageControls" destination="17" id="19"/>
                 <outlet property="viewPosition" destination="5" id="23"/>
+                <outlet property="viewVolume" destination="AkF-DC-GeZ" id="8RV-ol-Zzf"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -127,7 +134,7 @@
                     <rect key="frame" x="0.0" y="24" width="768" height="128"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                 </scrollView>
-                <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kLq-Aa-pB9">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kLq-Aa-pB9">
                     <rect key="frame" x="219" y="882" width="331" height="78"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
@@ -213,22 +220,81 @@
                         </button>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="331" id="jQo-DU-Jfn"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AkF-DC-GeZ">
+                    <rect key="frame" x="550" y="882" width="218" height="78"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="11n-1S-xDe">
+                            <rect key="frame" x="20" y="33" width="16" height="16"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        </imageView>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yFd-Nz-R3R">
+                            <rect key="frame" x="178" y="33" width="16" height="16"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        </imageView>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="78" id="0GN-Px-HLN"/>
+                        <constraint firstItem="11n-1S-xDe" firstAttribute="leading" secondItem="AkF-DC-GeZ" secondAttribute="leading" constant="16" id="hGm-Tp-fiR"/>
+                        <constraint firstAttribute="trailing" secondItem="yFd-Nz-R3R" secondAttribute="trailing" constant="16" id="yG0-9F-iOL"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TN5-AR-NKj">
+                    <rect key="frame" x="0.0" y="882" width="218" height="78"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TnV-d3-0Xw" customClass="MPfmOutputMeterView">
+                            <rect key="frame" x="0.0" y="0.0" width="44" height="78"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        </view>
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="More Bass please" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dKR-nQ-mgs">
+                            <rect key="frame" x="50" y="52" width="163" height="21"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="14"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WgQ-Ag-aPc" customClass="MPfmEqualizerPresetGraphView">
+                            <rect key="frame" x="44" y="0.0" width="168" height="48"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        </view>
+                    </subviews>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="dKR-nQ-mgs" secondAttribute="trailing" constant="5" id="6BH-83-h6T"/>
+                        <constraint firstAttribute="height" constant="78" id="HCD-40-DmH"/>
+                        <constraint firstItem="dKR-nQ-mgs" firstAttribute="leading" secondItem="TnV-d3-0Xw" secondAttribute="trailing" constant="6" id="HGo-1N-JfZ"/>
+                        <constraint firstAttribute="trailing" secondItem="WgQ-Ag-aPc" secondAttribute="trailing" constant="8" id="RAS-ql-CPD"/>
+                        <constraint firstItem="WgQ-Ag-aPc" firstAttribute="leading" secondItem="TnV-d3-0Xw" secondAttribute="trailing" id="Yx3-mo-Dfc"/>
+                    </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="4" firstAttribute="top" secondItem="2" secondAttribute="top" constant="150" id="21Z-yX-Xnr"/>
+                <constraint firstItem="AkF-DC-GeZ" firstAttribute="leading" secondItem="kLq-Aa-pB9" secondAttribute="trailing" id="3tq-Ay-fYA"/>
                 <constraint firstAttribute="centerX" secondItem="kLq-Aa-pB9" secondAttribute="centerX" id="5Lm-db-aBf"/>
                 <constraint firstAttribute="bottom" secondItem="4" secondAttribute="bottom" constant="77" id="EaN-fi-nUQ"/>
+                <constraint firstAttribute="trailing" secondItem="AkF-DC-GeZ" secondAttribute="trailing" id="GBD-F3-uOG"/>
+                <constraint firstAttribute="bottom" secondItem="TN5-AR-NKj" secondAttribute="bottom" id="LZh-Np-FeD"/>
                 <constraint firstAttribute="trailing" secondItem="6" secondAttribute="trailing" id="NE8-B9-P36"/>
                 <constraint firstItem="5" firstAttribute="leading" secondItem="2" secondAttribute="leading" id="QPh-4B-k0D"/>
+                <constraint firstItem="kLq-Aa-pB9" firstAttribute="leading" secondItem="TN5-AR-NKj" secondAttribute="trailing" constant="1" id="QsQ-Cx-bKe"/>
                 <constraint firstItem="6" firstAttribute="leading" secondItem="2" secondAttribute="leading" id="RbY-yA-JWl"/>
                 <constraint firstAttribute="bottom" secondItem="kLq-Aa-pB9" secondAttribute="bottom" id="XNa-pd-GCF"/>
                 <constraint firstAttribute="trailing" secondItem="5" secondAttribute="trailing" id="Xbp-YS-ZnO"/>
                 <constraint firstItem="6" firstAttribute="top" secondItem="2" secondAttribute="top" constant="24" id="ZzY-EU-X30"/>
                 <constraint firstItem="kLq-Aa-pB9" firstAttribute="top" secondItem="4" secondAttribute="bottom" constant="-1" id="avd-zp-IfI"/>
                 <constraint firstAttribute="trailing" secondItem="4" secondAttribute="trailing" id="krf-lc-weg"/>
+                <constraint firstItem="TN5-AR-NKj" firstAttribute="leading" secondItem="2" secondAttribute="leading" id="rLv-w1-V33"/>
                 <constraint firstItem="4" firstAttribute="leading" secondItem="2" secondAttribute="leading" id="tKk-wh-2Re"/>
+                <constraint firstAttribute="bottom" secondItem="AkF-DC-GeZ" secondAttribute="bottom" id="zon-gh-gx5"/>
             </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackOpaque"/>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
