--- a/MPfm/MPfm.iOS/XIB/iPad/MarkersViewController_iPad.xib
+++ b/MPfm/MPfm.iOS/XIB/iPad/MarkersViewController_iPad.xib
@@ -34,6 +34,7 @@
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                             <color key="separatorColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                            <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </tableView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="5" customClass="MPfmSemiTransparentButton">
                             <rect key="frame" x="705" y="4" width="50" height="31"/>
