iOS: Added new style for SemiTransparentButton; now a lot more transparent but with an outline/border. Fixed several bugs in new player controls scroll view. Added ScaleView to simulate a button click with a group of views (used to open the Effects view from the Effects view in the player controls scale view). Replaced all splash screens with white space for now.

--- a/MPfm/MPfm.iOS/XIB/iPad/PlayerViewController_iPad.xib
+++ b/MPfm/MPfm.iOS/XIB/iPad/PlayerViewController_iPad.xib
@@ -245,7 +245,7 @@
                         <constraint firstAttribute="trailing" secondItem="yFd-Nz-R3R" secondAttribute="trailing" constant="16" id="yG0-9F-iOL"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TN5-AR-NKj">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TN5-AR-NKj" customClass="MPfmScaleView">
                     <rect key="frame" x="0.0" y="883" width="218" height="78"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
