--- a/MPfm/MPfm.iOS/XIB/iPhone/PlayerViewController_iPhone.xib
+++ b/MPfm/MPfm.iOS/XIB/iPhone/PlayerViewController_iPhone.xib
@@ -179,7 +179,7 @@
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         </view>
-                        <view contentMode="scaleToFill" id="Fh8-2c-sjp">
+                        <view contentMode="scaleToFill" id="Fh8-2c-sjp" customClass="MPfmScaleView">
                             <rect key="frame" x="0.0" y="384" width="320" height="72"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <subviews>
