iOS: Added UI for SyncConnectManual. Several bug fixes for iOS 6.

--- a/MPfm/MPfm.iOS/XIB/iPad/SyncViewController_iPad.xib
+++ b/MPfm/MPfm.iOS/XIB/iPad/SyncViewController_iPad.xib
@@ -26,9 +26,13 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                 </tableView>
-                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="38" customClass="MPfmButton">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="38" customClass="MPfmButton">
                     <rect key="frame" x="244" y="968" width="280" height="44"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="44" id="BSK-Uf-x3b"/>
+                        <constraint firstAttribute="width" constant="280" id="fS2-XT-occ"/>
+                    </constraints>
                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                     <state key="normal" title="Connect to a device manually"/>
                     <connections>
